# trace

./: .gitignore  CLAUDE.md  CURSOR_SETUP.md  DEMO.md  LICENSE  MCP_SETUP.md  PACKAGING.md  README.en.md  README.md  Trace-windows.spec  install.sh  pyproject.toml  requirements.txt  run_mcp_server.py  setup.py
assets/: app_icon.icns
code/: electron_bridge.py  main.py
electron_app/: .gitignore  index.html  main.js  package-lock.json  package.json  preload.js  vite.config.js
prompts/: agent_detector_prompts_v1.md  batcher_prompts_v1.md  handlers_prompts_v1.md
scripts/: build_macos_app.sh  build_windows_app.ps1  demo.sh  run_windows_ci_tests.py  selftest_diff.py  setup_cursor_mcp.py  start_mcp_server.sh
tests/: _ci_platform.py  _tempdir.py  test_activity_recorder.py  test_binary_file_lifecycle_handlers.py  test_codex_hook.py  test_cursor_mcp_setup.py  test_daemon_manager.py  test_demo_and_packaging.py  test_detectors_cli.py  test_docx_handler.py  test_e2e_smoke.py  test_electron_bridge.py  test_electron_diff_bridge.py  test_electron_init_bridge.py  test_electron_mcp_setup_runtime.py  test_electron_renderer.py  test_electron_restore_bridge.py  test_handlers.py  test_image_handler.py  test_ipc.py  test_mcp_setup.py  test_menubar_app.py  test_p2_repository.py  test_path_deduper.py  test_pdf_handler.py  test_pptx_handler.py  test_repository.py  test_repository_agents_workspace.py  test_repository_manifest_helpers.py  test_trace_mcp_server.py  test_transcript_detector.py  test_tray.py  test_tui_agents_view.py  test_tui_app.py  test_tui_commits_view.py  test_tui_entry.py  (+8 more)
(+72 files in other folders)
