[project]
name = "trace"
version = "0.1.0"
description = "A macOS background tracker for multi-agent editing activity."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "watchdog>=3.0.0",
    "psutil>=5.9.0",
    "rumps>=0.4.0; sys_platform == 'darwin'",
    "pystray>=0.19.0; sys_platform != 'darwin'",
    "ttkbootstrap>=1.10.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.21",
    "PyMuPDF>=1.23.0",
    "Pillow>=10.0.0",
    "pyfiglet>=1.0.0",
]

[dependency-groups]
dev = [
    "py2app>=0.28.8; sys_platform == 'darwin'",
    "pyinstaller>=6.0.0",
    "pytest>=8.0.0",
]

[tool.uv]
package = false
