[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trace"
version = "0.1.0"
description = "A local TUI tracker for multi-agent editing activity."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "watchdog>=3.0.0",
    "psutil>=5.9.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.21",
    "PyMuPDF>=1.23.0",
    "Pillow>=10.0.0",
    "pyfiglet>=1.0.0",
    "textual>=0.60",
]

[project.scripts]
trace = "main:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools]
package-dir = {"" = "code"}
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["code"]

[tool.uv]
package = true
